--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -2314,9 +2314,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	min-height: 155px;
 	margin-bottom: 15px;
 	text-align: center;
-	flex: 1;
 	margin-right: 15px;
 	padding: 15px 0;
+	width: 49%;
+	margin-right: 2%;
 
 	&#podcast_college {
 		background-color: #dca628;
