--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -66,7 +66,23 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-6">
+				<h2>Videos</h2>
+				<p><a class="article-submit" href="/video/new"><span class="fa fa-plus"></span> New Video</a></p>
+				<% videos.forEach(function(video){ %>
+
+						<div class="thing">
+							<p><a href="/video/<%= video.slug %>/edit"><%= video.title %></a>
+							<span style="float:right"><a href="/video/<%= video.slug %>/edit">Edit</a></span></p>
+						</div>
+
+					<% }) %>
+
+<!-- 			  	<div class="thing">
+						<h5><a href="/admin/podcasts/">All Podcasts</a></h5>
+					</div> -->
+			</div>
+			<div class="col-md-6">
 				<h2>Players</h2>
 				<% players.forEach(function(player){ %>
 			    	<p><a href="/player/<%= player.id %>"><%= player.name %></a>
