--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -13,7 +13,8 @@
 					<p><a href="/about" class="footer-links">About Football by Football</a></p>
 					<p><a href="/privacyandterms" class="footer-links">Privacy & Terms of Service</a></p>
 				</div>
-				<div class="col-md-4">
+
+				<!-- <div class="col-md-4">
 					<h3>Join Our Newsletter</h3>
 					<form action="http://footballbyfootball.createsend.com/t/t/s/ijjdkl/" method="post">
 				    <p class="cf">
@@ -28,8 +29,41 @@
 				        <button type="submit">Subscribe</button>
 				    </p>
 					</form>
-					<a href="http://www.yardbarker.com/"><img border="0" width="100" src="http://www.yardbarker.com/images/ybn/badge_100.gif" height="50"/></a>
+				</div> -->
+				<div class="col-md-4">
+					<h3>Join Our Newsletter</h3>
+				<!-- Begin MailChimp Signup Form -->
+
+					<div id="mc_embed_signup">
+					  <form action="//footballbyfootball.us11.list-manage.com/subscribe/post?u=c49d0f3db9eb039d661f19d41&amp;id=d5798c9ad0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					    <div id="mc_embed_signup_scroll">
+								<p class="cf">
+									<label for="mce-MMERGE3">Name</label>
+									<input type="text" value="" name="MMERGE3" class="" id="mce-MMERGE3">
+								</p>
+					      <p class="cf">
+					        <label for="mce-EMAIL">Email<span class="asterisk">*</span>
+					        </label>
+					        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+					      </p>
+					      <div id="mce-responses" class="clear">
+					        <div class="response" id="mce-error-response" style="display:none"></div>
+					        <div class="response" id="mce-success-response" style="display:none"></div>
+					      </div>
+					      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+					      <div style="position: absolute; left: -5000px;" aria-hidden="true">
+					        <input type="text" name="b_c49d0f3db9eb039d661f19d41_d5798c9ad0" tabindex="-1" value="">
+					      </div>
+					      <p class="cf">
+					        <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="button">Subscribe</button>
+					      </p>
+					    </div>
+					  </form>
 				</div>
+
+				<!--End mc_embed_signup-->
+				</div>
+
 			</div>
 			<div class="row copyright">
 				<p>© Football By Football, LLC
@@ -41,7 +75,7 @@
 
 	<script type="text/javascript" src="/js/podcast_square.min.js"></script>
 
-	<script src="http://network.yardbarker.com/network/ybn_pixel/12986" type="text/javascript"></script> <noscript></noscript>
+	<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us11.list-manage.com","uuid":"c49d0f3db9eb039d661f19d41","lid":"d5798c9ad0"}) })</script>
 
 	<% if (process.env.NODE_ENV == "production") { %>
 		<!-- Monitoring scripts -->
