--- a/views/column-editor/edit.ejs
+++ b/views/column-editor/edit.ejs
@@ -1,4 +1,4 @@
-<%= include ../header %>	
+<%= include ../header %>
 <script>
 	window.slug = <%- JSON.stringify(column.slug) %>;
 	window.Players = <%- JSON.stringify(players) %>;
@@ -6,6 +6,6 @@
 
 <div id='react-content'></div>
 
-<script src='/js/column-editor/column-edit.compiled.js' ></script>
+<script src='/js/column-editor/column-edit.compiled.1.js' ></script>
 
 <%= include ../footer %>
