--- a/views/column-editor/new.ejs
+++ b/views/column-editor/new.ejs
@@ -1,9 +1,9 @@
-<%= include ../header %>	
+<%= include ../header %>
 
 <script>window.Players = <%- JSON.stringify(players) %>;</script>
 
 <div id='react-content'></div>
 
-<script src='/js/column-editor/column-edit.compiled.js' ></script>
+<script src='/js/column-editor/column-edit.compiled.1.js' ></script>
 
 <%= include ../footer %>
